<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ECF0F1"
    tools:context="sk.martialhero.fragment.CreateGroupFragment">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/change_image_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/add_image"
                android:textColor="@color/blackTextColor"
                android:textSize="15sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="190dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="12dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    android:src="@drawable/preset_create_group"
                    android:id="@+id/image_added"/>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_layout_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/group_name_fragment"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:hint="@string/name_group_hint"
                        android:isScrollContainer="false"
                        android:singleLine="true"
                        android:visibility="visible" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_layout_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/group_location_fragment"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:hint="@string/location_group_hint"
                        android:isScrollContainer="false"
                        android:singleLine="true"
                        android:visibility="visible" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_layout_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/group_description_fragment"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:hint="@string/description_group_hint"
                        android:isScrollContainer="true"
                        android:singleLine="false"
                        android:visibility="visible" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/create_group_button"
                    style="@style/DefaultButtonStyle"
                    android:layout_gravity="bottom|center"
                    android:layout_marginTop="5dp"
                    android:text="@string/create_group" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>